--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anne's Notebook</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Anne</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="dark-theme">
+    <div class="app-container">
+        <header>
+            <div class="user-info">
+                <span class="status-dot"></span>
+                <h1>Anne Maria Ekka</h1>
+            </div>
+            <div class="menu-container">
+                <button id="menuBtn" class="icon-btn">⋮</button>
+                <div id="dropdownMenu" class="dropdown hidden">
+                    <button id="refreshBtn">Refresh Chat</button>
+                    <button id="themeToggle">Light Mode</button>
+                </div>
+            </div>
+        </header>
+
+        <main id="chatSection">
+            <div id="placeholder" class="placeholder">Let's start the conversation</div>
+            <div id="messages"></div>
+        </main>
+
+        <footer>
+            <div class="input-wrapper">
+                <input type="text" id="userInput" placeholder="Message..." autocomplete="off">
+                <button id="sendBtn" class="send-icon">↑</button>
+            </div>
+        </footer>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
